# stock-widget

./: .gitignore  README.md  design-qa.md  gen-ico.ps1  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-30-maintenance-hardening.md  2026-07-22-fund-etf-data-fix.md
src/: App.source.test.ts  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/nsis/: SimpChinese.nsh  hooks.nsh  installer.nsi
src-tauri/src/: http.rs  main.rs
src/api/: stock.source.test.ts  stock.test.ts  stock.ts
src/components/: MiniWidget.vue  SearchBox.vue  StockItem.vue  TitleBar.vue
src/components/fund/: FundIncomeChart.source.test.ts  (+7 more)
src/stores/: settings.test.ts  settings.ts  stock.test.ts  stock.ts
src/styles/: global.css  global.test.ts
src/utils/: assets.test.ts  assets.ts  chart.test.ts  chart.ts  format.test.ts  format.ts  fundCache.test.ts  fundCache.ts  fundChart.test.ts  fundChart.ts  fundLedger.test.ts  fundLedger.ts  fundQuote.test.ts  fundQuote.ts  fundValidation.test.ts  fundValidation.ts  funds.test.ts  funds.ts  installer.test.ts  list.test.ts  list.ts  modalFocus.test.ts  modalFocus.ts  positions.test.ts  positions.ts  security.test.ts  settingsActions.test.ts  settingsActions.ts
src/views/: Detail.source.test.ts  Detail.vue  FundDetail.source.test.ts  FundDetail.vue  Home.fund-list.source.test.ts  Home.vue  Settings.vue  accessibility.source.test.ts  modalBackdrop.source.test.ts
(+2 files in other folders)
